fix the overlap

--- a/_includes/style.css
+++ b/_includes/style.css
@@ -112,7 +112,7 @@ body.dark .sidebar-footer{border-color:#444;color:#aaa}
 {% assign column_layouts = "default,archive,static" | split: "," %}
 .layout{display:flex;flex-direction:{% unless column_layouts contains page.layout %}row{% else %}column{% endunless %};min-height:100vh}
 {% unless column_layouts contains page.layout %}
-.content-wrapper{margin:.5rem;width: calc(100% - 300px);transition:margin-left .3s ease}
+.content-wrapper{margin:.5rem;width: calc(100% - 330px);transition:margin-left .3s ease}
 .right-sidebar{margin:.5rem}
 .right-sidebar > div{margin:.5rem auto}
 .right-sidebar .sticky-box{position:sticky;top:3.5rem;width:300px}
